force-app/main/default/objects/Opponent__c/Opponent__c.object-meta.xml
<CustomObject>
    <description>Référentiel adversaire pour la préparation de match (Club 360 / Match Intelligence).</description>
    <label>Opponent</label>
    <nameField>
        <label>Opponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opponents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>