force-app/main/default/objects/Opponent__c/fields/BuildUpStyle__c.field-meta.xml
<CustomField>
    <fullName>BuildUpStyle__c</fullName>
    <label>Build-Up Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Build-up</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
                <default>true</default>
                <label>Mixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>