force-app/main/default/objects/Opponent__c/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <label>Coach</label>
    <length>100</length>
    <type>Text</type>
</CustomField>