force-app/main/default/objects/Opponent__c/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <label>League</label>
    <length>100</length>
    <type>Text</type>
</CustomField>