force-app/main/default/objects/Opponent__c/fields/OpponentExternalId__c.field-meta.xml
<CustomField>
    <fullName>OpponentExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Opponent External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>