force-app/main/default/objects/Opponent__c/fields/PreferredFormation__c.field-meta.xml
<CustomField>
    <fullName>PreferredFormation__c</fullName>
    <label>Preferred Formation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-3-3</fullName>
            </value>
            <value>
                <fullName>4-2-3-1</fullName>
            </value>
            <value>
                <fullName>4-4-2</fullName>
            </value>
            <value>
                <fullName>3-5-2</fullName>
            </value>
            <value>
                <fullName>3-4-3</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
                <default>true</default>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>