force-app/main/default/objects/Opponent__c/fields/PressingStyle__c.field-meta.xml
<CustomField>
    <fullName>PressingStyle__c</fullName>
    <label>Pressing Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Press</fullName>
            </value>
            <value>
                <fullName>Mid Block</fullName>
                <default>true</default>
                <label>Mid Block</label>
            </value>
            <value>
                <fullName>Low Block</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>