force-app/main/default/objects/Opponent__c/fields/SetPieceThreat__c.field-meta.xml
<CustomField>
    <fullName>SetPieceThreat__c</fullName>
    <label>Set Piece Threat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>